@@ -1,6 +1,7 @@
 Version 5.5.0
 - Added warning for modifying ptra in inline assembly
 - Added throwifcaught command for BASIC
+- Allowed '$' in inline assembly in C
 - Fixed a problem with large ranges in lookup/lookdown
 - Fixed a preprocessor bug which sometimes caused failure to recognize comments
 - Fixed a bug in handling multiple return values that are less than long sized
